--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 env:
-- REPOSITORY_NAME="cpp_allocators"
-- PACKAGE_NAME="main"
-- PROJECT_NAME="allocators"
+- REPOSITORY_NAME=cpp_allocators
+- PACKAGE_NAME=main
+- GENERATED_DEB_NAME=memory_allocator
 language: cpp
 dist: bionic
 before_script:
@@ -19,5 +19,5 @@ deploy:
   provider: script
   skip_cleanup: true
   script:
-  - curl -T $PROJECT_NAME-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -uboristestov:$BINTRAY_API_KEY "https://api.bintray.com/content/boristestov/$REPOSITORY_NAME/$PACKAGE_NAME/$TRAVIS_BUILD_NUMBER/$PROJECT_NAME-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64;publish=1"
+  - curl -T $GENERATED_DEB_NAME-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -uboristestov:$BINTRAY_API_KEY "https://api.bintray.com/content/boristestov/$REPOSITORY_NAME/$GENERATED_DEB_NAME/$TRAVIS_BUILD_NUMBER/$PROJECT_NAME-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64;publish=1"
 
