--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
 - cd build
 - cmake ../cmake
 - cmake --build .
-- xvfb-run cmake --build . --target test
+- cmake --build . --target test
 - cmake --build . --target package
 deploy:
   provider: script
